--- a/environment.yml
+++ b/environment.yml
@@ -1,132 +1,175 @@
-name: clipenv
+name: clip
 channels:
   - defaults
 dependencies:
-  - pytorch=1.7.1
-  - cudatoolkit=11.0
-  - torchvision
-  - traitlets
-  - prompt-toolkit
-  - importlib_metadata
-  - pyzmq
-  - zeromq
-  - wheel
-  - libffi
-  - libstdcxx-ng
-  - matplotlib-inline
-  - stack_data
-  - libgomp
-  - sqlite
-  - ld_impl_linux-64
-  - psutil
-  - ipython
-  - packaging
-  - _openmp_mutex
-  - _libgcc_mutex
-  - decorator
-  - pip
-  - libgcc-ng
-  - wcwidth
-  - backcall
-  - nest-asyncio
-  - pygments
-  - typing_extensions
-  - pexpect
-  - executing
-  - python-dateutil
-  - pure_eval
-  - tk
-  - xz
-  - debugpy
-  - asttokens
-  - zlib
-  - ca-certificates
-  - parso
-  - readline
-  - ncurses
-  - ptyprocess
-  - six
-  - setuptools
-  - comm
-  - jupyter_client
-  - jedi
-  - openssl
-  - platformdirs
-  - importlib-metadata
-  - tornado
-  - jupyter_core
-  - zipp
-  - libsodium
-  - pickleshare
-  - python=3.8
-  - ipykernel
-  - libpng
-  - giflib
-  - brotli-bin
-  - pillow
-  - libevent
-  - libuuid
-  - kiwisolver
-  - libcups
-  - jpeg
-  - libwebp
-  - qtwebkit
-  - mkl
-  - pyqt
-  - libclang
-  - qt-webengine
-  - ply
-  - lerc
-  - pcre
-  - blas
-  - libedit
-  - nspr
-  - intel-openmp
-  - libdeflate
-  - gstreamer
-  - libxcb
-  - freetype
-  - glib
-  - importlib_resources
-  - libclang13
-  - icu
-  - libwebp-base
-  - lz4-c
-  - sip
-  - munkres
-  - lcms2
-  - libllvm14
-  - gst-plugins-base
-  - nss
-  - toml
-  - mkl-service
-  - pyqt5-sip
-  - libbrotlienc
-  - krb5
-  - expat
-  - cyrus-sasl
-  - libxml2
-  - mysql
-  - dbus
-  - fonttools
-  - libxkbcommon
-  - pyparsing
-  - matplotlib-base
-  - brotli
-  - qt-main
-  - libxslt
-  - cycler
-  - contourpy
-  - libpq
-  - tbb
-  - libbrotlicommon
-  - numpy-base
-  - mkl_random
-  - fontconfig
-  - libbrotlidec
-  - zstd
-  - libtiff
-  - numpy
-  - mkl_fft
-  - matplotlib
-prefix: /home/lazye/anaconda3/envs/clipenv
+  - _libgcc_mutex=0.1=main
+  - _openmp_mutex=5.1=1_gnu
+  - asttokens=2.0.5=pyhd3eb1b0_0
+  - backcall=0.2.0=pyhd3eb1b0_0
+  - blas=1.0=mkl
+  - bottleneck=1.3.5=py38h7deecbd_0
+  - brotli=1.0.9=h5eee18b_7
+  - brotli-bin=1.0.9=h5eee18b_7
+  - brotlipy=0.7.0=py38h27cfd23_1003
+  - ca-certificates=2023.08.22=h06a4308_0
+  - certifi=2023.7.22=py38h06a4308_0
+  - cffi=1.15.1=py38h5eee18b_3
+  - charset-normalizer=2.0.4=pyhd3eb1b0_0
+  - click=8.0.4=py38h06a4308_0
+  - comm=0.1.2=py38h06a4308_0
+  - contourpy=1.0.5=py38hdb19cb5_0
+  - cryptography=41.0.3=py38hdda0065_0
+  - cudatoolkit=11.8.0=h6a678d5_0
+  - cycler=0.11.0=pyhd3eb1b0_0
+  - cyrus-sasl=2.1.28=h52b45da_1
+  - dbus=1.13.18=hb2f20db_0
+  - debugpy=1.6.7=py38h6a678d5_0
+  - decorator=5.1.1=pyhd3eb1b0_0
+  - executing=0.8.3=pyhd3eb1b0_0
+  - expat=2.5.0=h6a678d5_0
+  - filelock=3.9.0=py38h06a4308_0
+  - fontconfig=2.14.1=h4c34cd2_2
+  - fonttools=4.25.0=pyhd3eb1b0_0
+  - freetype=2.12.1=h4a9f257_0
+  - giflib=5.2.1=h5eee18b_3
+  - glib=2.69.1=he621ea3_2
+  - gmp=6.2.1=h295c915_3
+  - gmpy2=2.1.2=py38heeb90bb_0
+  - gst-plugins-base=1.14.1=h6a678d5_1
+  - gstreamer=1.14.1=h5eee18b_1
+  - icu=58.2=he6710b0_3
+  - idna=3.4=py38h06a4308_0
+  - importlib-metadata=6.0.0=py38h06a4308_0
+  - importlib_metadata=6.0.0=hd3eb1b0_0
+  - importlib_resources=5.2.0=pyhd3eb1b0_1
+  - intel-openmp=2023.1.0=hdb19cb5_46305
+  - ipykernel=6.25.0=py38h2f386ee_0
+  - ipython=8.12.2=py38h06a4308_0
+  - jedi=0.18.1=py38h06a4308_1
+  - jinja2=3.1.2=py38h06a4308_0
+  - joblib=1.2.0=py38h06a4308_0
+  - jpeg=9e=h5eee18b_1
+  - jupyter_client=8.1.0=py38h06a4308_0
+  - jupyter_core=5.3.0=py38h06a4308_0
+  - kiwisolver=1.4.4=py38h6a678d5_0
+  - krb5=1.20.1=h143b758_1
+  - lcms2=2.12=h3be6417_0
+  - ld_impl_linux-64=2.38=h1181459_1
+  - lerc=3.0=h295c915_0
+  - libbrotlicommon=1.0.9=h5eee18b_7
+  - libbrotlidec=1.0.9=h5eee18b_7
+  - libbrotlienc=1.0.9=h5eee18b_7
+  - libclang=14.0.6=default_hc6dbbc7_1
+  - libclang13=14.0.6=default_he11475f_1
+  - libcups=2.4.2=h2d74bed_1
+  - libdeflate=1.17=h5eee18b_1
+  - libedit=3.1.20221030=h5eee18b_0
+  - libevent=2.1.12=hdbd6064_1
+  - libffi=3.4.4=h6a678d5_0
+  - libgcc-ng=11.2.0=h1234567_1
+  - libgfortran-ng=11.2.0=h00389a5_1
+  - libgfortran5=11.2.0=h1234567_1
+  - libgomp=11.2.0=h1234567_1
+  - libllvm14=14.0.6=hdb19cb5_3
+  - libpng=1.6.39=h5eee18b_0
+  - libpq=12.15=hdbd6064_1
+  - libprotobuf=3.20.3=he621ea3_0
+  - libsodium=1.0.18=h7b6447c_0
+  - libstdcxx-ng=11.2.0=h1234567_1
+  - libtiff=4.5.1=h6a678d5_0
+  - libuuid=1.41.5=h5eee18b_0
+  - libwebp=1.3.2=h11a3e52_0
+  - libwebp-base=1.3.2=h5eee18b_0
+  - libxcb=1.15=h7f8727e_0
+  - libxkbcommon=1.0.1=h5eee18b_1
+  - libxml2=2.10.4=hcbfbd50_0
+  - libxslt=1.1.37=h2085143_0
+  - lz4-c=1.9.4=h6a678d5_0
+  - markupsafe=2.1.1=py38h7f8727e_0
+  - matplotlib=3.7.2=py38h06a4308_0
+  - matplotlib-base=3.7.2=py38h1128e8f_0
+  - matplotlib-inline=0.1.6=py38h06a4308_0
+  - mkl=2023.1.0=h213fc3f_46343
+  - mkl-service=2.4.0=py38h5eee18b_1
+  - mkl_fft=1.3.8=py38h5eee18b_0
+  - mkl_random=1.2.4=py38hdb19cb5_0
+  - mpc=1.1.0=h10f8cd9_1
+  - mpfr=4.0.2=hb69a4c5_1
+  - mpmath=1.3.0=py38h06a4308_0
+  - munkres=1.1.4=py_0
+  - mysql=5.7.24=h721c034_2
+  - ncurses=6.4=h6a678d5_0
+  - nest-asyncio=1.5.6=py38h06a4308_0
+  - networkx=3.1=py38h06a4308_0
+  - ninja=1.10.2=h06a4308_5
+  - ninja-base=1.10.2=hd09550d_5
+  - nltk=3.8.1=py38h06a4308_0
+  - nspr=4.35=h6a678d5_0
+  - nss=3.89.1=h6a678d5_0
+  - numexpr=2.8.4=py38hc78ab66_1
+  - numpy=1.24.3=py38hf6e8229_1
+  - numpy-base=1.24.3=py38h060ed82_1
+  - openjpeg=2.4.0=h3ad879b_0
+  - openssl=3.0.11=h7f8727e_2
+  - packaging=23.1=py38h06a4308_0
+  - pandas=2.0.3=py38h1128e8f_0
+  - parso=0.8.3=pyhd3eb1b0_0
+  - pcre=8.45=h295c915_0
+  - pexpect=4.8.0=pyhd3eb1b0_3
+  - pickleshare=0.7.5=pyhd3eb1b0_1003
+  - pillow=10.0.1=py38ha6cbd5a_0
+  - pip=23.2.1=py38h06a4308_0
+  - platformdirs=3.10.0=py38h06a4308_0
+  - ply=3.11=py38_0
+  - pooch=1.7.0=py38h06a4308_0
+  - prompt-toolkit=3.0.36=py38h06a4308_0
+  - psutil=5.9.0=py38h5eee18b_0
+  - ptyprocess=0.7.0=pyhd3eb1b0_2
+  - pure_eval=0.2.2=pyhd3eb1b0_0
+  - pycparser=2.21=pyhd3eb1b0_0
+  - pygments=2.15.1=py38h06a4308_1
+  - pyopenssl=23.2.0=py38h06a4308_0
+  - pyparsing=3.0.9=py38h06a4308_0
+  - pyqt=5.15.7=py38h6a678d5_1
+  - pyqt5-sip=12.11.0=py38h6a678d5_1
+  - pysocks=1.7.1=py38h06a4308_0
+  - python=3.8.18=h955ad1f_0
+  - python-dateutil=2.8.2=pyhd3eb1b0_0
+  - python-tzdata=2023.3=pyhd3eb1b0_0
+  - pytorch=2.0.1=cpu_py38hdc00b08_0
+  - pytz=2023.3.post1=py38h06a4308_0
+  - pyzmq=25.1.0=py38h6a678d5_0
+  - qt-main=5.15.2=h7358343_9
+  - qt-webengine=5.15.9=h9ab4d14_7
+  - qtwebkit=5.212=h3fafdc1_5
+  - readline=8.2=h5eee18b_0
+  - regex=2023.10.3=py38h5eee18b_0
+  - requests=2.31.0=py38h06a4308_0
+  - scipy=1.10.1=py38hf6e8229_1
+  - setuptools=68.0.0=py38h06a4308_0
+  - sip=6.6.2=py38h6a678d5_0
+  - six=1.16.0=pyhd3eb1b0_1
+  - sqlite=3.41.2=h5eee18b_0
+  - stack_data=0.2.0=pyhd3eb1b0_0
+  - sympy=1.11.1=py38h06a4308_0
+  - tbb=2021.8.0=hdb19cb5_0
+  - tk=8.6.12=h1ccaba5_0
+  - toml=0.10.2=pyhd3eb1b0_0
+  - torchvision=0.15.2=cuda118py38h196c800_0
+  - tornado=6.3.2=py38h5eee18b_0
+  - traitlets=5.7.1=py38h06a4308_0
+  - typing-extensions=4.7.1=py38h06a4308_0
+  - typing_extensions=4.7.1=py38h06a4308_0
+  - urllib3=1.26.16=py38h06a4308_0
+  - wcwidth=0.2.5=pyhd3eb1b0_0
+  - wheel=0.41.2=py38h06a4308_0
+  - xz=5.4.2=h5eee18b_0
+  - zeromq=4.3.4=h2531618_0
+  - zipp=3.11.0=py38h06a4308_0
+  - zlib=1.2.13=h5eee18b_0
+  - zstd=1.5.5=hc292b87_0
+  - pip:
+      - clip==1.0
+      - ftfy==6.1.1
+      - tqdm==4.66.1
+prefix: /home/lazye/anaconda3/envs/clip
